# cw20_factory_contract

token_factory_contract/: Cargo.toml
token_factory_contract/src/: contract.rs
